tests/baselines/reference/controlFlowInitializedDestructuringVariables.errors.txt
tests/cases/compiler/controlFlowInitializedDestructuringVariables.ts(4,10): error TS2532: Object is possibly 'undefined'.


==== tests/cases/compiler/controlFlowInitializedDestructuringVariables.ts (1 errors) ====
    declare const obj: { a?: string, b?: number };
    const {
        a = "0",
        b = +a,
             ~
!!! error TS2532: Object is possibly 'undefined'.
    } = obj;
    